--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-## Core latex/pdflatex auxiliary files:
+# Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
 *.log
@@ -14,7 +14,8 @@
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
-# *.pdf
+*.pdf
+**/auto/*
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
